Improves agent compatibility with complex bootstraps